[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Game/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Game/Map/Adventure/Level1/LightMap.gd" type="Script" id=2]
[ext_resource path="res://src/Game/Trap/NeedleTrap.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Assets/Tile/Tiles-Lightmap-1.png" type="Texture" id=4]
[ext_resource path="res://src/Game/Trap/NeedleTrap.gd" type="Script" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=3]
0/name = "Tiles-Lightmap-1.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tiles-Lightmap-1.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Tiles-Lightmap-1.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.607843, 0.164706, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.2, 0.0784314, 0.894118, 1 )

[node name="LightMap" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, -1 )
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 0, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 0, 0, 65536, 0, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 0, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 65554, 0, 0, 131072, 0, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 0, 0, 131077, 2, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 2, 0, 131083, 0, 0, 131084, 2, 0, 131085, 0, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 2, 0, 131090, 0, 0, 196608, 0, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 0, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 0, 0, 196620, 2, 0, 196621, 0, 0, 196622, 2, 0, 196623, 2, 0, 196624, 2, 0, 196625, 2, 0, 196626, 0, 0, 262144, 0, 0, 262145, 2, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 2, 0, 262150, 0, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 2, 0, 262157, 0, 0, 262158, 1, 0, 262159, 0, 0, 262160, 1, 0, 262161, 2, 0, 262162, 0, 0, 327680, 0, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 0, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 0, 0, 327694, 2, 0, 327695, 0, 0, 327696, 2, 0, 327697, 2, 0, 327698, 0, 0, 393216, 0, 0, 393217, 1, 0, 393218, 1, 0, 393219, 2, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 2, 0, 393224, 0, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 2, 0, 393229, 1, 0, 393230, 2, 0, 393231, 0, 0, 393232, 2, 0, 393233, 2, 0, 393234, 0, 0, 458752, 0, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 0, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458767, 1, 0, 458768, 1, 0, 458769, 2, 0, 458770, 0, 0, 524288, 0, 0, 524289, 2, 0, 524290, 1, 0, 524291, 1, 0, 524292, 0, 0, 524293, 1, 0, 524294, 1, 0, 524295, 2, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524306, 0, 0, 589824, 0, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 0, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 0, 0, 589840, 1, 0, 589841, 2, 0, 589842, 0, 0, 655360, 0, 0, 655361, 2, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 2, 0, 655366, 1, 0, 655367, 1, 0, 655368, 0, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 2, 0, 655374, 2, 0, 655375, 0, 0, 655376, 2, 0, 655377, 2, 0, 655378, 0, 0, 720896, 0, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 0, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 0, 0, 720912, 2, 0, 720913, 2, 0, 720914, 0, 0, 786432, 0, 0, 786433, 2, 0, 786434, 2, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 2, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 2, 0, 786449, 2, 0, 786450, 0, 0, 851968, 0, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851986, 0, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.0862745, 0.105882, 0.266667, 1 )
position = Vector2( 93.3448, 95.2828 )
z_index = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressTimer" type="ProgressBar" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -74.5
margin_top = 8.97969
margin_right = 74.5
margin_bottom = 22.9797
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
max_value = 20.0
value = 20.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="CanvasLayer"]
process_mode = 0
wait_time = 0.1
autostart = true

[node name="GroupTrap" type="Node2D" parent="."]

[node name="NeedleTrap" type="Node2D" parent="GroupTrap" instance=ExtResource( 3 )]
position = Vector2( 159.104, 354.59 )
scale = Vector2( 2, 2 )
script = ExtResource( 5 )

[node name="NeedleTrap2" type="Node2D" parent="GroupTrap" instance=ExtResource( 3 )]
position = Vector2( 793.925, 736.157 )
scale = Vector2( 2, 2 )
script = ExtResource( 5 )

[node name="NeedleTrap3" type="Node2D" parent="GroupTrap" instance=ExtResource( 3 )]
position = Vector2( 947.816, 225.965 )
scale = Vector2( 2, 2 )
script = ExtResource( 5 )

[node name="NeedleTrap4" type="Node2D" parent="GroupTrap" instance=ExtResource( 3 )]
position = Vector2( 479.533, 614.878 )
scale = Vector2( 2, 2 )
script = ExtResource( 5 )

[connection signal="value_changed" from="CanvasLayer/ProgressTimer" to="." method="_on_ProgressTimer_value_changed"]
[connection signal="timeout" from="CanvasLayer/Timer" to="." method="_on_Timer_timeout"]
